Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 booktitle: Proceedings of 2018 ACM SIGKDD Workshop on Causal Discovery
 publisher: PMLR
 series: Proceedings of Machine Learning Research
+issn: 2640-3498
 volume: 92
 published: 2018-08-09
 year: '2018'
@@ -31,8 +32,11 @@ baseurl: "/v92"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+plugins:
+- jekyll-remote-theme
+remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
-github:
+ghub:
   edit: true
   repository: v92
 display:
@@ -51,5 +55,6 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
-# Auto generated from /Users/mreid/mlresearch/v92/bibliographyCD2018.bib
+# Original source:  /Users/neil/mlresearch/bibtex.bib
