--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,16 @@ published: 2018-08-09
 year: '2018'
 shortname: CD
 url: http://proceedings.mlr.press
+author:
+  name: PMLR
 start: 2018-08-20
 end: 2018-08-20
 layout: proceedings
 id: CD2018
 month: 0
 cycles: false
+bibtex_editor: Le, Thuc Duy and Zhang, Kun and Kiciman, Emre and Hyv\"arinen, Aapo
+  and Liu, Lin
 editor:
 - given: Thuc Duy
   family: Le
