--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ---
 booktitle: Proceedings of 2018 ACM SIGKDD Workshop on Causal Discovery
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
@@ -51,6 +52,10 @@ baseurl: "/v92"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -77,6 +82,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
