--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ volume: 92
 published: 2018-08-09
 year: '2018'
 shortname: CD
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 start: 2018-08-20
